--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ p {
 /* ----------------------------------------------------------------------------------- */
 
 body {
-  background-color: #faf8ef;
   width: 495px;
+  background-color: #faf8ef;
   margin: 30px auto;
 }
 a {
@@ -82,37 +82,36 @@ p {
   display: grid;
   grid-template-rows: repeat(var(--grid-size), var(--cell-size));
   grid-template-columns: repeat(var(--grid-size), var(--cell-size));
-  background-color: #bbac9f;
   gap: var(--cell-gap);
-  border-radius: 7.5px;
-  padding: var(--cell-gap);
   margin-bottom: 30px;
+  padding: var(--cell-gap);
+  border-radius: 7.5px;
+  background-color: #bbac9f;
   position: relative;
   font-size: 40px;
 }
-.cell {
-  background-color: #ccc0b3;
+.game-board_cell {
   border-radius: 7.5px;
+  background-color: #ccc0b3;
 }
 
-.tile {
+.game-board_tile {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: red;
-  width: var(--cell-size);
-  height: var(--cell-size);
-  border-radius: 7.5px;
   top: calc(
     var(--y) * var(--cell-size) + var(--cell-gap) + var(--cell-gap) * var(--y)
   );
   left: calc(
     var(--x) * var(--cell-size) + var(--cell-gap) + var(--cell-gap) * var(--x)
   );
-  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--cell-size);
+  height: var(--cell-size);
+  border-radius: 7.5px;
   background-color: hsl(145, 90%, var(--background-lightness));
   color: hsl(145, 60%, var(--text-lightness));
+  font-weight: bold;
   animation: popUp 200ms ease-in-out;
   transition: 100ms ease-in-out;
 }
@@ -124,6 +123,52 @@ p {
   100% {
     opacity: 1;
     transform: scale(1);
+  }
+}
+.game-board_game-over {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  animation: showResultContainer 1000ms ease-in forwards;
+}
+.game-board_game-over_text {
+  margin-bottom: 30px;
+  color: #776e65;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 100px;
+  animation: showResultContent 1000ms ease-in forwards;
+}
+.game-board_game-over_btn {
+  width: 40%;
+  padding: 10px;
+  background-color: #8f7a66;
+  border-radius: 5px;
+  text-align: center;
+  color: #f9f6f2;
+  font-size: 28px;
+  cursor: pointer;
+  animation: showResultContent 1000ms ease-in forwards;
+}
+@keyframes showResultContainer {
+  0% {
+    background: hsla(200, 0%, 100%, 0);
+  }
+  100% {
+    background: hsla(200, 0%, 100%, 0.75);
+  }
+}
+@keyframes showResultContent {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 /* ----------------------------------------------------------------------------------- */
